--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,6 @@
     /* MAIN*/
     /* ----------------------------------------------------------------- */
     
-    .container {}
-    
     .search-form {
         display: flex;
         flex-wrap: wrap;
@@ -199,6 +197,7 @@
     .job-type {
         display: flex;
         flex-wrap: wrap;
+        min-width: 300px;
         max-width: 1000px;
         justify-content: center;
         gap: 2.5rem;
